<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ strings.xml
  ~ 
  ~ Copyright (C) 2013 6 Wunderkinder GmbH
  ~
  ~ Author: Jose L Ugia - @Jl_Ugia
  ~ Designer: Benedikt Lehnert - @blehnert
  ~ Designer: Timothy Achumba - @iam_timm
  ~ Version: 1.0
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>

    <string name="app_name">Booster</string>

    <string name="pref_title_stick_container">Stick layer to</string>
    <string name="pref_title_show_shadow">Show shadow</string>
    <string name="pref_title_show_offset">Closed offset</string>
    <string name="open_button_container">Open</string>
    <string name="close_button_container">Close</string>

    <string name="swipe_label">Swipe!</string>
    <string name="swipe_left_label">Swipe left!</string>
    <string name="swipe_right_label">Swipe right!</string>
    <string name="swipe_up_label">Swipe up!</string>
    <string name="swipe_down_label">Swipe down!</string>

    <string name="label_right">Right</string>
    <string name="label_left">Left</string>
    <string name="label_middle">Middle</string>
    <string name="label_top">Top</string>
    <string name="label_bottom">Bottom</string>

    <string name="not_applicable">n/a</string>

    <string-array name="pref_list_titles">
        <item>@string/label_right</item>
        <item>@string/label_middle</item>
        <item>@string/label_left</item>
        <item>@string/label_top</item>
        <item>@string/label_bottom</item>
    </string-array>

    <string-array name="pref_list_values">
        <item>right</item>
        <item>middle</item>
        <item>left</item>
        <item>top</item>
        <item>bottom</item>
    </string-array>

    <string name="pref_go">Go!</string>
    <string name="prompt_username">nickname</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short"/>
    <string name="action_register__short">Register</string>
    <string name="prompt_email">e-mail</string>
    <string name="prompt_phone">phone number (optional)</string>
    <string name="prompt_date">date of birth (optional)</string>
    <string name="prompt_full_name">full name</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_company">New Company</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign out</string>
    <string name="text_Archived">Archived</string>
    <string name="text_explore_booster">Explore Booster</string>
    <string name="hello_world">Hello world!</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name_drawer">Companies</string>
    <string name="prompt_company_name">company name</string>
    <string name="prompt_description">description</string>
    <string name="action_archive_company">Archive company</string>
    <string name="action_new_project">New project</string>
    <string name="action_new_task">New task</string>
    <string name="action_archive_project">Archive project</string>


    <string-array name="company_names">
        <item>Oyster</item>
        <item>EPAM</item>
        <item>GlobalLogic</item>
        <item>Luxoft</item>
        <item>Grammarly</item>
        <item>IntelTechno</item>
    </string-array>


    <string-array name="project_names">
        <item>User interface</item>
        <item>Server optimization</item>
        <item>Documenting</item>
        <item>Log in fix</item>
        <item>Security bug fix</item>
    </string-array>


    <string-array name="task_names">
        <item>right</item>
        <item>middle</item>
        <item>left</item>
        <item>top</item>
        <item>bottom</item>
    </string-array>


</resources>