<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_vacation_desktop"
        >


    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                style="@style/LoginFormContainer"
                android:orientation="vertical"
                android:layout_gravity="bottom"

                >

            <EditText
                    android:id="@+id/log_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_margin="5dp"
                    android:singleLine="true"

                    />


            <EditText
                    android:id="@+id/log_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_margin="5dp"

                    />


            <LinearLayout
                    style="@style/LoginFormContainer"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/ButtonRed"
                        android:layout_weight="1"
                        android:text="@string/action_register__short"
                        android:layout_margin="5dp"
                        />


                <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/ButtonRed"
                        android:layout_weight="1"
                        android:layout_margin="5dp"

                        android:text="@string/action_sign_in_short"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>